--- a/app/src/main/res/layout/fragment_calculate.xml
+++ b/app/src/main/res/layout/fragment_calculate.xml
@@ -50,6 +50,7 @@
                             //Settings Line
 
                             <LinearLayout
+                                android:id="@+id/ln_settings"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical"
