--- a/app/src/main/res/layout/fragment_head.xml
+++ b/app/src/main/res/layout/fragment_head.xml
@@ -31,6 +31,15 @@
             android:layout_marginRight="8dp"
             android:src="@drawable/ic_landscape_mode" />
 
+        <ImageView
+            android:id="@+id/logout"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="right"
+            android:visibility="gone"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/ic_logout" />
+
 
     </androidx.appcompat.widget.Toolbar>
 
