--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -147,6 +147,18 @@
 
 
             <Button
+                android:id="@+id/profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:backgroundTint="@color/white"
+                android:drawableLeft="@drawable/ic_profile"
+                android:drawableTint="@color/teal_200"
+                android:elevation="0dp"
+                android:text="User profile"
+                android:textAllCaps="false"
+                android:textColor="@color/gray_1x" />
+            <Button
                 android:id="@+id/messages"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -173,6 +185,18 @@
                 android:textColor="@color/gray_1x" />
 
             <Button
+                android:id="@+id/language"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:backgroundTint="@color/white"
+                android:drawableLeft="@drawable/ic_baseline_language_24"
+                android:elevation="0dp"
+                android:text="Language"
+                android:textAllCaps="false"
+                android:textColor="@color/gray_1x" />
+
+            <Button
                 android:id="@+id/documentation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -187,14 +211,14 @@
                 android:textColor="@color/gray_1x" />
 
             <Button
-                android:id="@+id/language"
+                android:id="@+id/settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="3dp"
                 android:backgroundTint="@color/white"
-                android:drawableLeft="@drawable/ic_baseline_language_24"
+                android:drawableLeft="@drawable/ic_settings"
                 android:elevation="0dp"
-                android:text="Language"
+                android:text="Settings"
                 android:textAllCaps="false"
                 android:textColor="@color/gray_1x" />
         </LinearLayout>
