--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,19 @@
     android:orientation="vertical"
     tools:context=".ui.main_screen.FragmentHome">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/style_corner_1_grey"
+        android:layoutDirection="rtl"
+        android:layoutMode="opticalBounds"
+        app:defaultQueryHint="Search"
+        app:iconifiedByDefault="false"
+        app:queryHint="Search product" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -21,18 +34,6 @@
             android:focusableInTouchMode="true"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.SearchView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="16dp"
-                android:background="@drawable/style_corner_1_grey"
-                android:layoutDirection="rtl"
-                android:layoutMode="opticalBounds"
-                app:defaultQueryHint="Search"
-                app:iconifiedByDefault="false"
-                app:queryHint="Search product" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
