--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.secondary_screens.FragmentLogin">
+    tools:context=".ui.register_screens.FragmentLogin">
 
     <ImageView
         android:id="@+id/img"
