--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -74,7 +74,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginRight="16dp"
             android:background="@drawable/style_corner_1_grey"
-            app:startIconDrawable="@drawable/ic_profile"
+            app:startIconDrawable="@drawable/ic_storefront"
             app:startIconTint="@color/main_text_color">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -82,7 +82,7 @@
                 style="@style/Widget.Material3.TextInputLayout.FilledBox"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Username/Email"
+                android:hint="Name/Email"
                 android:maxLines="1"
                 android:textSize="17sp" />
 
