--- a/app/src/main/res/layout/fragment_sms.xml
+++ b/app/src/main/res/layout/fragment_sms.xml
@@ -29,23 +29,26 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back" />
 
-    <in.aabhasjindal.otptextview.OtpTextView
+    <EditText
         android:id="@+id/otp_code"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:autofillHints="smsOtpCode"
+        android:background="@drawable/style_corner_1_grey"
+        android:gravity="center"
+        android:hint="000000"
+        android:importantForAutofill="yes"
         android:inputType="number"
+        android:letterSpacing="0.25"
+        android:maxLength="6"
+        android:padding="10dp"
         android:textColor="@color/main_text_color"
-        app:bar_active_color="@color/main_text_color"
-        app:bar_enabled="true"
-        app:bar_inactive_color="@color/gray_1x"
-        app:height="40dp"
+        android:textSize="25dp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text"
-        app:length="4"
-        app:otp_text_size="24dp"
-        app:width="40dp" />
+        app:layout_constraintTop_toBottomOf="@id/text" />
 
     <ProgressBar
         android:id="@+id/progress"
