--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -68,33 +68,41 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/ll_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/style_corner_1_grey"
-            app:startIconDrawable="@drawable/ic_storefront"
+            app:startIconDrawable="@drawable/ic_phone"
             app:startIconTint="@color/main_text_color">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/username"
+            <com.santalu.maskara.widget.MaskEditText
+                android:id="@+id/number"
                 style="@style/Widget.Material3.TextInputLayout.FilledBox"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Name/Email"
+                android:digits="0123456789"
+                android:hint="Number"
+                app:maskCharacter="*"
+                app:maskStyle="completable"
+                app:mask="+ *** (**) ***-**-**"
+                android:inputType="number"
                 android:maxLines="1"
                 android:textSize="17sp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/ll_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="16dp"
-            android:background="@drawable/style_corner_1_grey"
+            app:boxStrokeErrorColor="@color/red_color"
+            app:errorEnabled="true"
+            app:errorTextColor="@color/red_color"
             app:passwordToggleEnabled="true"
             app:startIconDrawable="@drawable/ic_key"
             app:startIconTint="@color/main_text_color">
@@ -131,6 +139,7 @@
             android:layout_marginRight="16dp"
             android:backgroundTint="@color/main_text_color"
             android:text="login" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
